# machines-network

./: LICENSE  README.markdown  machines-network.cabal
src/Data/Machine/: AltWye.hs  Duplex.hs  STM.hs
src/Network/: Machine.hs
src/Network/Machine/Protocol/: HTTP.hs  LMTP.hs  NNTP.hs  SMTP.hs  SOCKS.hs  Torrent.hs
tests/: doctests.hs
